sync all commits

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
         </form>
 
-        <div class="container-table card align-items-center mt-4 p-3" id="table-main" >
+        <div class="container-table card align-items-center mt-4 p-3" id="table-main" hidden>
             <div class="table-navbar d-flex align-self-end">
                 <!--<div class="table-filter dropdown"></div>-->
                 <form class="d-flex" role="search">
@@ -145,13 +145,13 @@
             </div>
         </div>
 
-        <div class="card r-10 py-1 floating-menu" hidden>
+        <div class="card r-10 py-1 floating-menu" hi>
             <h5 class="fm-title text-center mb-1">Element</h5>
             <img src="resource/img/form-img-laptop.jpg" class="card-img-top align-self-center w-75" alt="floating-menu-img">
             <div class="list-group-item d-flex justify-content-between align-items-center px-1">
                 <p class="my-0 fw-7" id="fm-item-name">
                     <img src="resource/icon/item-24x24.png" alt="floating-menu-img-item">
-                    Item : 
+                        Item : 
                 </p>
                 <p class="my-0 fw-7" id="fm-item-value">value</p>
             </div>
