Form save data collection

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="--background-gradient-blue">
     <header>
-        <nav class="bg-light pt-3">
+        <nav tabindex="0" class="bg-light pt-3">
             <ul class="nav nav-tabs justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link active" id="nav-btn-form" aria-current="page" href="#">Add</a>
@@ -24,112 +24,55 @@
             </ul>
         </nav>
     </header>
-    <main id="container">
-        <form id="container-from" class="card w-75 h-75 mt-4 position-absolute top-50 start-50 translate-middle" id="form-main">
-            <div class="card-header">
-                <span id="main-section-title">Add new device</span>
-                <span id="sub-section" hidden>
-                    <img class="mx-1" src="/resource/icon/sub-section.svg" alt="...">
-                    <span id="sub-section-title">Laptop</span>
-                </span>
+    <main id="container"><form id="container-from" class="card w-75 h-75 mt-4 position-absolute top-50 start-50 translate-middle" id="form-main">
+        <div class="card-header">
+            <span id="main-section-title">Add new device</span>
+            <span id="sub-section" hidden>
+                <img class="mx-1" src="/resource/icon/sub-section.svg" alt="...">
+                <span id="sub-section-title">Laptop</span>
+            </span>
+        </div>
+        <div class="row g-0 w-100 h-100">
+            <div class="col-4 d-flex justify-content-center align-items-center p-2">
+                <img src="resource/img/form-img-laptop.jpg" class="card-img w-100" alt="form-card-image">
             </div>
-            <div class="row g-0 w-100 h-100">
-                <div class="col-4 d-flex justify-content-center align-items-center p-2">
-                    <img src="resource/img/form-img-laptop.jpg" class="card-img w-100" alt="form-card-image">
-                </div>
-                <div class="col-8 p-2 d-flex flex-column justify-content-between">
-                    <div id="carouselExampleControlsNoTouching" class="carousel slide h-100 d-inline-flex flex-column justify-content-center" data-bs-ride="false">
-                        <div id="container-forms" class="carousel-inner d-flex align-items-center">
-                            <div id="form-general" class="carousel-item active" >
-                                <label for="select-device" class="form-label text-start" >Device format : (required)</label>
-                                <select name="select-device" class="form-select" id="select-device">
-                                    <option value="" selected disabled hidden>Select a type</option>
-                                    <option value="laptop">Laptop</option>
-                                    <option value="desk">Desk</option>
-                                </select><br>
-                                <label for="brand-input" class="form-label text-start" >Brand : (required)</label>
-                                <input type="text" class="form-control"  id="brand-input" name="brand-input" required><br>
-                                <label for="storage-input" class="form-label text-start" >Memory storage : (required)</label>
-                                <input type="number" class="form-control" id="storage-input" name="storage-input" placeholder="GB" required><br>
-                            </div>
+            <div class="col-8 p-2 d-flex flex-column justify-content-between">
+                <div id="carouselExampleControlsNoTouching" class="carousel slide h-100 d-inline-flex flex-column justify-content-center" data-bs-ride="false">
+                    <div id="container-forms" class="carousel-inner d-flex align-items-center p-1">
+                        <div id="form-general" class="carousel-item active" >
+                            <label for="select-device" class="form-label text-start" >Device format : (required)</label>
+                            <select tabindex="1" name="select-device" class="form-select" id="select-device">
+                                <option value="" selected disabled hidden>Select a type</option>
+                                <option value="laptop">Laptop</option>
+                                <option value="desk">Desk</option>
+                            </select><br>
+                            <label for="brand-input" class="form-label text-start" >Brand : (required)</label>
+                            <input tabindex="2" type="text" class="form-control"  id="brand-input" name="brand-input" required><br>
+                            <label for="model-input" class="form-label text-start" >Model : (required)</label>
+                            <input tabindex="3" type="text" class="form-control"  id="model-input" name="model-input" required><br>
+                            <label for="storage-input" class="form-label text-start" >Memory storage : (required)</label>
+                            <input tabindex="4" type="number" class="form-control" id="storage-input" name="storage-input" placeholder="GB" required>
+                        </div>
+                        <div id="form-format" class="carousel-item"></div>
+                        <div id="form-additional" class="carousel-item additional-quest">
+                            <label for="img-input" class="form-label text-start" >Image : </label>
+                            <input tabindex="7" type="file" class="form-control" id="img-input" name="img-input" accept=".png,.jpg,.svg"><br>
+                            <label for="description-input" class="form-label text-start" >Description :</label>
+                            <textarea tabindex="8" class="form-control size-f" id="description-input" name="description-input" rows="3" cols="30" placeholder="observations and comments"></textarea>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-end mt-2">
-                        <input type="button" class="btn btn-primary w-25 ms-2" id="send-form" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next" disabled value="Next">
-                    </div>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <input type="button" class="btn btn-secondary text-center w-25 ms-2" id="prev-form" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev" disabled value="Back">
+                    <input type="button" class="btn btn-primary text-center w-25 ms-2" id="send-form" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next" disabled value="Next">
                 </div>
             </div>
-        </form>
-        <div class="container-table card align-items-center mt-4 p-3" id="table-main" hidden>
-            <div class="table-navbar d-flex align-self-end">
-                <!--<div class="table-filter dropdown"></div>-->
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search">
-                    <button class="btn btn-outline-secondary disabled" type="submit">Search</button>
-                </form>
-            </div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col">Serial</th>
-                        <th scope="col">Type</th>
-                        <th scope="col">Brand</th>
-                        <th scope="col">Model</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="table-row--selected">
-                        <th class="d-flex align-items-center">
-                            <label for="table-row-item#" class="form-label m-0">1</label>
-                            <input type="checkbox" class="btn btn-light ms-1" id="table-row-item#" value="num#">
-                        </th>
-                        <td>1542315</td>
-                        <td>Laptop</td>
-                        <td>Lenovo</td>
-                        <td>Thinkpad 7</td>
-                        </tr>
-                        <tr class="table-info">
-                        <th scope="row">Total devices</th>
-                        <td colspan="4">
-                            <p class="table-value text-end fw-bold">1</p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="d-inline">
-                <button type="button" class="btn btn-sm disabled" id="table-btn-prev">Prev</button>
-                <button type="button" class="btn btn-outline-primary btn-sm active" id="table-btn-number" value="num#">1</button>
-                <button type="button" class="btn btn-outline-primary btn-sm disabled" id="table-btn-numbre-skip">...</button>
-                <button type="button" class="btn btn-sm disabled" id="table-btn-next">Next</button>
-            </div>
         </div>
-        <div class="card r-10 py-1 floating-menu" hidden>
-            <h5 class="fm-title text-center mb-1">Element</h5>
-            <img src="resource/img/form-img-laptop.jpg" class="card-img-top align-self-center w-75" alt="floating-menu-img">
-            <div class="list-group-item d-flex justify-content-between align-items-center px-1">
-                <p class="my-0 fw-7" id="fm-item-name">
-                    <img src="resource/icon/item-24x24.png" alt="floating-menu-img-item">
-                        Item : 
-                </p>
-                <p class="my-0 fw-7" id="fm-item-value">value</p>
-            </div>
-        </div>
+    </form>
+    <script async type="module" src="./scripts/formControl.js"></script>
     </main>
-    <script>
-        const navBtnForm = document.getElementById('nav-btn-form')
-        const navBtnTable = document.getElementById('nav-btn-table')
-        navBtnForm.addEventListener('click', () => {
-            navBtnForm.classList.add('active');
-            navBtnTable.classList.remove('active');
-        });
-        navBtnTable.addEventListener('click', () => {
-            navBtnTable.classList.add('active');
-            navBtnForm.classList.remove('active');
-        });
-    </script>
-    <script async type="module" src="/scripts/formControl.js"></script>
+    <script async type="module" src="/main.js"></script>
     <script type="text/javascript" src="/lib/bootstrap-5.2.0-dist/js/bootstrap.js"></script>
-    <script async type="text/javascript" src="/lib/popper/popper.js"></script>
+    <script type="text/javascript" src="/lib/popper/popper.js"></script>
 </body>
 </html>
